Added hero text mural

--- a/index.html
+++ b/index.html
@@ -4,9 +4,28 @@
   <meta charset="UTF-8">
   <title>Another Full Stack Web Developer Blog</title>
   <link rel="stylesheet" href="normalize.css">
+  <link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Hello World</h1>
+  <section class='mural'>
+    <section class='text'>
+      <h2 class='text-hero'>Scott<br \>Skender</h2>
+      <ul class='text-hero-list text-hero-list-left'>
+        <li>Ruby</li>
+        <li>JavaScript</li>
+      </ul>
+      <ul class='text-hero-list text-hero-list-center'>
+        <li>Go</li>
+        <li>Python</li>
+	<li>Clojure</li>
+      </ul>
+      <ul class='text-hero-list text-hero-list-right'>
+        <li>Elixir</li>
+	<li>C Sharp</li>
+	<li>Bash</li>
+      </ul>
+    </section>
+  </section>
 </body>
 </html>
