Updating hero list content

--- a/index.html
+++ b/index.html
@@ -13,17 +13,32 @@
       <h2 class='text-hero'>Scott<br \>Skender</h2>
       <ul class='text-hero-list text-hero-list-left'>
         <li>Ruby</li>
+        <li>Rails</li>
+	<li>RSpec</li>
         <li>JavaScript</li>
+        <li>Jasmine</li>
+        <li>Webpack</li>
+	<li>Capybara</li>
+        <li>SQL</li>
       </ul>
       <ul class='text-hero-list text-hero-list-center'>
         <li>Go</li>
-        <li>Python</li>
+        <li>Node</li>
 	<li>Clojure</li>
+	<li>React</li>
+	<li>MongoDB</li>
+	<li>Machine Learning</li>
+	<li>Domain Driven Design</li>
+	<li>Refactoring</li>
       </ul>
       <ul class='text-hero-list text-hero-list-right'>
         <li>Elixir</li>
-	<li>C Sharp</li>
-	<li>Bash</li>
+	<li>Elm</li>
+	<li>Data Science</li>
+	<li>Python</li>
+	<li>Microservices</li>
+	<li>HTML</li>
+	<li>CSS</li>
       </ul>
     </section>
   </section>
