--- a/index.html
+++ b/index.html
@@ -29,16 +29,14 @@
 	<li>MongoDB</li>
 	<li>Machine Learning</li>
 	<li>Domain Driven Design</li>
-	<li>Refactoring</li>
+	<li>Microservices</li>
       </ul>
       <ul class='text-hero-list text-hero-list-right'>
         <li>Elixir</li>
 	<li>Elm</li>
 	<li>Data Science</li>
 	<li>Python</li>
-	<li>Microservices</li>
-	<li>HTML</li>
-	<li>CSS</li>
+	<li>Haskell</li>
       </ul>
     </section>
   </section>
