--- a/index.html
+++ b/index.html
@@ -16,27 +16,30 @@
         <li>Rails</li>
 	<li>RSpec</li>
         <li>JavaScript</li>
+        <li>JQuery</li>
         <li>Jasmine</li>
-        <li>Webpack</li>
+        <li>Node</li>
 	<li>Capybara</li>
-        <li>SQL</li>
       </ul>
       <ul class='text-hero-list text-hero-list-center'>
         <li>Go</li>
-        <li>Node</li>
 	<li>Clojure</li>
-	<li>React</li>
-	<li>MongoDB</li>
-	<li>Machine Learning</li>
+	<li>SQL</li>
+	<li>Mongo</li>
 	<li>Domain Driven Design</li>
 	<li>Microservices</li>
+	<li>Refactoring</li>
+	<li>TDD</li>
       </ul>
       <ul class='text-hero-list text-hero-list-right'>
-        <li>Elixir</li>
-	<li>Elm</li>
-	<li>Data Science</li>
+      	<li>Vim</li>
+        <li>Webpack</li>
+	<li>Mocha</li>
+	<li>React</li>
+	<li>Redux</li>
 	<li>Python</li>
-	<li>Haskell</li>
+	<li>Data Science</li>
+	<li>Machine Learning</li>
       </ul>
     </section>
   </section>
