Styling blogroll with css

--- a/index.html
+++ b/index.html
@@ -40,7 +40,11 @@
       </ul>
     </section>
   </section>
-  <div id="app"></div>
+  <section class='mural'>
+    <div class='row'>
+      <div id="app"></div>
+    </div>
+  </section>
   <script src="bundle.js"></script>
 </body>
 </html>
