Styling homepage, setting up routing to posts

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Another Full Stack Web Developer Blog</title>
+  <title>Scott Skender - Full Stack Web Developer</title>
   <link rel="stylesheet" href="normalize.css">
-  <link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=PT+Mono|Oswald' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -43,11 +43,43 @@
       </ul>
     </section>
   </section>
-  <section class='mural'>
+  <section class='mural mural-orange'>
     <div class='row'>
       <div id="app"></div>
     </div>
   </section>
+  <section class='mural mural-blue'>
+    <div class='row'>
+      <div class='panel'>Projects</div>
+      <div class='panel'>
+        <a href='http://scribble.scottskender.com'>Scribble</a>
+	<a href='https://github.com/vandosant/web-synthesizer' class='text-small'>[github repo]</a>
+      </div>
+      <div class='panel'>
+        <a href='http://scottskender.com'>This website and cms</a>
+	<a href='https://github.com/vandosant/scottskender' class='text-small'>[github repo]</a>
+      </div>
+      <div class='panel'>
+        <a href='http://gameoflife.scottskender.com'>Game of life</a>
+	<a href='https://github.com/vandosant/game-of-life' class='text-small'>[github repo]</a>
+      </div>
+    </div>
+  </section>
+  <section class='mural mural-yellow'>
+    <div class='row'>
+      <div class='panel'>Contact</div>
+      <div class='panel'>
+        <a href='mailto:sjskender@gmail.com'>sjskender@gmail.com</a>
+      </div>
+      <div class='panel'>
+        <a href='https://twitter.com/scottskender'>Twitter</a>
+      </div>
+      <div class='panel'>
+        <a href='https://github.com/vandosant'>Github</a>
+      </div>
+      <div class='panel'>
+        <a href='https://linkedin.com/in/scottskender'>Linkedin</a>
+      </div>
   <script src="bundle.js"></script>
 </body>
 </html>
